--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+.login-form{
+    width:100%;
+    
+    margin:auto;
+    height:100%
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.row-right{
+    float: right;
+	width: 30%;
+    margin-right: -2.5cm;
+    margin-top: 1cm;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+label{
+    font-weight: bold;
+}
+#text{
+    font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#login{
+    background-color: rgb(166, 135, 177);
 }
 
-.App-link {
-  color: #61dafb;
+#register{
+    background-color: white;
+    color: rgb(166, 135, 177);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
